doc: rewrite TRC ceremony documentation to include scion-pki
Rewrite the TRC ceremony documentation to include the scion-pki tool
which is a lot more ergonomic than openssl based approach. The openssl
based approach is still kept such that people do not need to trust
the distributed scion-pki tool.

Furthermore, the documentation and tests are updated to use openssl
3.0.14.

And finally, the scion-pki tool is extended to support RFC3339 based
timestamps when creating TRC payloads for both NotBefore and NotAfter
fields. The legacy unix timestamp and duration based validity time are
still supported.

--- a/doc/requirements.in
+++ b/doc/requirements.in
@@ -1,7 +1,8 @@
-Sphinx
 recommonmark
+Sphinx
+sphinx_copybutton
+sphinx_design
 sphinx-autobuild
+sphinx-lint
 sphinx-rtd-theme
 sphinxcontrib-openapi
-sphinx_copybutton
-sphinx-lint
