--- a/pkg/private/common/BUILD.bazel
+++ b/pkg/private/common/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     ],
     importpath = "github.com/scionproto/scion/pkg/private/common",
     visibility = ["//visibility:public"],
+    deps = ["//pkg/private/serrors:go_default_library"],
 )
 
 go_test(
