Move IfIDType out of private/common and to its own package.
Given that IfIDType represents generic interface IDs as used in segements
distributed by the control service, it seems that it shouln't be private
either, even if it currently can be. So the new package isn't private.

--- a/daemon/internal/servers/BUILD.bazel
+++ b/daemon/internal/servers/BUILD.bazel
@@ -15,13 +15,13 @@ go_library(
         "//pkg/drkey:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/metrics:go_default_library",
-        "//pkg/private/common:go_default_library",
         "//pkg/private/ctrl/path_mgmt:go_default_library",
         "//pkg/private/ctrl/path_mgmt/proto:go_default_library",
         "//pkg/private/prom:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
         "//pkg/proto/daemon:go_default_library",
+        "//pkg/segment/ifid:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/path:go_default_library",
         "//private/revcache:go_default_library",
