--- a/pkg/daemon/BUILD.bazel
+++ b/pkg/daemon/BUILD.bazel
@@ -16,13 +16,13 @@ go_library(
         "//pkg/drkey:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/metrics:go_default_library",
-        "//pkg/private/common:go_default_library",
         "//pkg/private/ctrl/path_mgmt:go_default_library",
         "//pkg/private/prom:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/proto/daemon:go_default_library",
         "//pkg/proto/drkey:go_default_library",
         "//pkg/scrypto/cppki:go_default_library",
+        "//pkg/segment/ifid:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/path:go_default_library",
         "//private/topology:go_default_library",
