--- a/private/topology/BUILD.bazel
+++ b/private/topology/BUILD.bazel
@@ -18,8 +18,8 @@ go_library(
         "//pkg/addr:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/metrics:go_default_library",
-        "//pkg/private/common:go_default_library",
         "//pkg/private/serrors:go_default_library",
+        "//pkg/segment/ifid:go_default_library",
         "//private/topology/json:go_default_library",
         "//private/topology/underlay:go_default_library",
     ],
@@ -41,9 +41,9 @@ go_test(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/metrics/mock_metrics:go_default_library",
-        "//pkg/private/common:go_default_library",
         "//pkg/private/ctrl/path_mgmt/proto:go_default_library",
         "//pkg/private/xtest:go_default_library",
+        "//pkg/segment/ifid:go_default_library",
         "//private/topology/json:go_default_library",
         "//private/topology/mock_topology:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
