--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -16,11 +16,11 @@ go_library(
         "//pkg/drkey:go_default_library",
         "//pkg/experimental/epic:go_default_library",
         "//pkg/log:go_default_library",
-        "//pkg/private/common:go_default_library",
         "//pkg/private/processmetrics:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
         "//pkg/scrypto:go_default_library",
+        "//pkg/segment/ifid:go_default_library",
         "//pkg/slayers:go_default_library",
         "//pkg/slayers/path:go_default_library",
         "//pkg/slayers/path/empty:go_default_library",
