--- a/router/control/BUILD.bazel
+++ b/router/control/BUILD.bazel
@@ -11,8 +11,8 @@ go_library(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/log:go_default_library",
-        "//pkg/private/common:go_default_library",
         "//pkg/private/serrors:go_default_library",
+        "//pkg/segment/ifid:go_default_library",
         "//private/keyconf:go_default_library",
         "//private/topology:go_default_library",
         "@org_golang_x_crypto//pbkdf2:go_default_library",
