--- a/scion/cmd/scion/BUILD.bazel
+++ b/scion/cmd/scion/BUILD.bazel
@@ -19,8 +19,8 @@ go_library(
         "//pkg/addr:go_default_library",
         "//pkg/daemon:go_default_library",
         "//pkg/log:go_default_library",
-        "//pkg/private/common:go_default_library",
         "//pkg/private/serrors:go_default_library",
+        "//pkg/segment/ifid:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/addrutil:go_default_library",
         "//pkg/snet/path:go_default_library",
