--- a/private/path/combinator/BUILD.bazel
+++ b/private/path/combinator/BUILD.bazel
@@ -15,7 +15,7 @@ go_library(
         "//pkg/private/util:go_default_library",
         "//pkg/segment:go_default_library",
         "//pkg/segment/extensions/staticinfo:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//pkg/slayers/path:go_default_library",
         "//pkg/slayers/path/scion:go_default_library",
         "//pkg/snet:go_default_library",
@@ -38,7 +38,7 @@ go_test(
         "//pkg/private/xtest:go_default_library",
         "//pkg/private/xtest/graph:go_default_library",
         "//pkg/segment:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//pkg/slayers/path:go_default_library",
         "//pkg/slayers/path/scion:go_default_library",
         "//pkg/snet:go_default_library",
