--- a/control/beacon/beacondbtest/BUILD.bazel
+++ b/control/beacon/beacondbtest/BUILD.bazel
@@ -10,7 +10,7 @@ go_library(
         "//pkg/addr:go_default_library",
         "//pkg/private/xtest/graph:go_default_library",
         "//pkg/segment:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//pkg/slayers/path:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
