--- a/gateway/pathhealth/BUILD.bazel
+++ b/gateway/pathhealth/BUILD.bazel
@@ -35,7 +35,7 @@ go_test(
         "//pkg/addr:go_default_library",
         "//pkg/private/ctrl/path_mgmt:go_default_library",
         "//pkg/private/util:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/mock_snet:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
