--- a/pkg/daemon/BUILD.bazel
+++ b/pkg/daemon/BUILD.bazel
@@ -22,7 +22,7 @@ go_library(
         "//pkg/proto/daemon:go_default_library",
         "//pkg/proto/drkey:go_default_library",
         "//pkg/scrypto/cppki:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/path:go_default_library",
         "//private/topology:go_default_library",
