--- a/pkg/private/ctrl/path_mgmt/BUILD.bazel
+++ b/pkg/private/ctrl/path_mgmt/BUILD.bazel
@@ -10,6 +10,6 @@ go_library(
         "//pkg/private/ctrl/path_mgmt/proto:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
     ],
 )
