--- a/pkg/segment/iface/BUILD.bazel
+++ b/pkg/segment/iface/BUILD.bazel
@@ -2,14 +2,14 @@ load("//tools/lint:go.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["ifid.go"],
-    importpath = "github.com/scionproto/scion/pkg/segment/ifid",
+    srcs = ["iface.go"],
+    importpath = "github.com/scionproto/scion/pkg/segment/iface",
     visibility = ["//visibility:public"],
 )
 
 go_test(
     name = "go_default_test",
-    srcs = ["ifid_test.go"],
+    srcs = ["iface_test.go"],
     deps = [
         ":go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
