--- a/private/path/pathpol/BUILD.bazel
+++ b/private/path/pathpol/BUILD.bazel
@@ -17,7 +17,7 @@ go_library(
         "//pkg/addr:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/private/serrors:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//pkg/snet:go_default_library",
         "@com_github_antlr_antlr4_runtime_go_antlr//:go_default_library",
     ],
@@ -37,7 +37,7 @@ go_test(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/private/xtest/graph:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/mock_snet:go_default_library",
         "//pkg/snet/path:go_default_library",
