--- a/private/pathdb/query/BUILD.bazel
+++ b/private/pathdb/query/BUILD.bazel
@@ -8,6 +8,6 @@ go_library(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/segment:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
     ],
 )
