--- a/private/revcache/BUILD.bazel
+++ b/private/revcache/BUILD.bazel
@@ -12,7 +12,7 @@ go_library(
         "//pkg/addr:go_default_library",
         "//pkg/private/ctrl/path_mgmt:go_default_library",
         "//pkg/segment:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//private/storage/cleaner:go_default_library",
         "//private/storage/db:go_default_library",
     ],
@@ -30,7 +30,7 @@ go_test(
         "//pkg/private/util:go_default_library",
         "//pkg/private/xtest/graph:go_default_library",
         "//pkg/segment:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//private/revcache/mock_revcache:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
