--- a/private/segment/segfetcher/BUILD.bazel
+++ b/private/segment/segfetcher/BUILD.bazel
@@ -54,7 +54,7 @@ go_test(
         "//pkg/private/xtest/graph:go_default_library",
         "//pkg/private/xtest/matchers:go_default_library",
         "//pkg/segment:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//pkg/snet:go_default_library",
         "//private/pathdb/mock_pathdb:go_default_library",
         "//private/pathdb/query:go_default_library",
