--- a/private/storage/beacon/sqlite/BUILD.bazel
+++ b/private/storage/beacon/sqlite/BUILD.bazel
@@ -13,7 +13,7 @@ go_library(
         "//pkg/addr:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//private/storage/beacon:go_default_library",
         "//private/storage/db:go_default_library",
     ],
