--- a/router/control/internal/metrics/BUILD.bazel
+++ b/router/control/internal/metrics/BUILD.bazel
@@ -10,7 +10,7 @@ go_library(
     visibility = ["//router/control:__subpackages__"],
     deps = [
         "//pkg/private/prom:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
     ],
 )
