--- a/scion/showpaths/BUILD.bazel
+++ b/scion/showpaths/BUILD.bazel
@@ -12,7 +12,7 @@ go_library(
         "//pkg/addr:go_default_library",
         "//pkg/daemon:go_default_library",
         "//pkg/private/serrors:go_default_library",
-        "//pkg/segment/ifid:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//pkg/snet:go_default_library",
         "//private/app/path:go_default_library",
         "//private/app/path/pathprobe:go_default_library",
