--- a/private/revcache/memrevcache/BUILD.bazel
+++ b/private/revcache/memrevcache/BUILD.bazel
@@ -8,7 +8,7 @@ go_library(
     deps = [
         "//pkg/private/ctrl/path_mgmt:go_default_library",
         "//private/revcache:go_default_library",
-        "@com_github_patrickmn_go_cache//:go_default_library",
+        "@at_zgo_zcache_v2//:go_default_library",
     ],
 )
 
