--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -15,13 +15,13 @@ jobs:
         # Check that PR is of the form `<subsystem>: <lowercase message>`
 
         url='https://docs.scion.org/en/latest/dev/git.html#good-commit-messages'
-        if [[ ! "$TITLE" =~ ^[a-z0-9,/]*:[[:space:]] ]]; then
+        if [[ ! "$TITLE" =~ ^[a-z0-9,/-]*:[[:space:]] ]]; then
           echo '::error::The PR title should start with `<substystem>: `. See '"$url"
           exit 1
         fi
         # Title should be lower case; initialisms and identifiers still occur occasionally and should be allowed.
         # -> enforce only the first word
-        if [[ ! "$TITLE" =~ ^[a-z0-9,/]*:[[:space:]][a-z] ]]; then
+        if [[ ! "$TITLE" =~ ^[a-z0-9,/-]*:[[:space:]][a-z] ]]; then
           echo '::error::The PR title should be lower case (enforced on first letter). See '"$url"
           exit 1
         fi
