DROP ME: all-the-things

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -108,6 +108,7 @@ steps:
     key: e2e
     steps:
     - label: "E2E: default :man_in_business_suit_levitating: (scion, ping)"
+      parallelism: 20
       command:
         - echo "--- build"
         - make
@@ -135,6 +136,7 @@ steps:
       key: e2e_integration_tests_v2
       retry: *automatic-retry
     - label: "E2E: failing links :man_in_business_suit_levitating:"
+      parallelism: 20
       command:
         - echo "--- build"
         - make
@@ -150,6 +152,7 @@ steps:
       key: e2e_revocation_test_v2
       retry: *automatic-retry
     - label: "E2E: default :docker: (ping)"
+      parallelism: 20
       command:
         - echo "--- build"
         - make build-dev docker-images
