use protoc plugin

--- a/pkg/proto/discovery/v1/discoveryconnect/BUILD.bazel
+++ b/pkg/proto/discovery/v1/discoveryconnect/BUILD.bazel
@@ -1,12 +1,6 @@
-load("//tools/lint:go.bzl", "go_library")
+load("//tools/proto:connect.bzl", "go_connect_library")
 
-go_library(
+go_connect_library(
     name = "go_default_library",
-    srcs = ["discovery.connect.go"],
-    importpath = "github.com/scionproto/scion/pkg/proto/discovery/v1/discoveryconnect",
-    visibility = ["//visibility:public"],
-    deps = [
-        "//pkg/proto/discovery:go_default_library",
-        "@com_connectrpc_connect//:go_default_library",
-    ],
+    proto = "discovery",
 )
