--- a/pkg/proto/hidden_segment/v1/hidden_segmentconnect/BUILD.bazel
+++ b/pkg/proto/hidden_segment/v1/hidden_segmentconnect/BUILD.bazel
@@ -1,12 +1,6 @@
-load("//tools/lint:go.bzl", "go_library")
+load("//tools/proto:connect.bzl", "go_connect_library")
 
-go_library(
+go_connect_library(
     name = "go_default_library",
-    srcs = ["hidden_segment.connect.go"],
-    importpath = "github.com/scionproto/scion/pkg/proto/hidden_segment/v1/hidden_segmentconnect",
-    visibility = ["//visibility:public"],
-    deps = [
-        "//pkg/proto/hidden_segment:go_default_library",
-        "@com_connectrpc_connect//:go_default_library",
-    ],
+    proto = "hidden_segment",
 )
