--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -250,6 +250,11 @@ write_source_files(
         "//dispatcher/mgmtapi:write_files",
         "//doc/command:write_files",
         "//gateway/mgmtapi:write_files",
+        "//pkg/proto/control_plane/v1/control_planeconnect:write_files",
+        "//pkg/proto/daemon/v1/daemonconnect:write_files",
+        "//pkg/proto/discovery/v1/discoveryconnect:write_files",
+        "//pkg/proto/gateway/v1/gatewayconnect:write_files",
+        "//pkg/proto/hidden_segment/v1/hidden_segmentconnect:write_files",
         "//private/ca/api:write_files",
         "//private/mgmtapi/cppki/api:write_files",
         "//private/mgmtapi/health/api:write_files",
