--- a/pkg/proto/control_plane/v1/control_planeconnect/BUILD.bazel
+++ b/pkg/proto/control_plane/v1/control_planeconnect/BUILD.bazel
@@ -1,17 +1,12 @@
-load("//tools/lint:go.bzl", "go_library")
+load("//tools/proto:connect.bzl", "go_connect_library")
 
-go_library(
+go_connect_library(
     name = "go_default_library",
-    srcs = [
+    files = [
         "cppki.connect.go",
         "drkey.connect.go",
         "renewal.connect.go",
         "seg.connect.go",
     ],
-    importpath = "github.com/scionproto/scion/pkg/proto/control_plane/v1/control_planeconnect",
-    visibility = ["//visibility:public"],
-    deps = [
-        "//pkg/proto/control_plane:go_default_library",
-        "@com_connectrpc_connect//:go_default_library",
-    ],
+    proto = "control_plane",
 )
