--- a/pkg/proto/daemon/v1/daemonconnect/BUILD.bazel
+++ b/pkg/proto/daemon/v1/daemonconnect/BUILD.bazel
@@ -1,13 +1,6 @@
-load("//tools/lint:go.bzl", "go_library")
+load("//tools/proto:connect.bzl", "go_connect_library")
 
-go_library(
+go_connect_library(
     name = "go_default_library",
-    srcs = ["daemon.connect.go"],
-    importpath = "github.com/scionproto/scion/pkg/proto/daemon/v1/daemonconnect",
-    visibility = ["//visibility:public"],
-    deps = [
-        "//pkg/proto/daemon:go_default_library",
-        "@com_connectrpc_connect//:go_default_library",
-        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
-    ],
+    proto = "daemon",
 )
