--- a/pkg/proto/gateway/v1/gatewayconnect/BUILD.bazel
+++ b/pkg/proto/gateway/v1/gatewayconnect/BUILD.bazel
@@ -1,12 +1,9 @@
-load("//tools/lint:go.bzl", "go_library")
+load("//tools/proto:connect.bzl", "go_connect_library")
 
-go_library(
+go_connect_library(
     name = "go_default_library",
-    srcs = ["prefix.connect.go"],
-    importpath = "github.com/scionproto/scion/pkg/proto/gateway/v1/gatewayconnect",
-    visibility = ["//visibility:public"],
-    deps = [
-        "//pkg/proto/gateway:go_default_library",
-        "@com_connectrpc_connect//:go_default_library",
+    files = [
+        "prefix.connect.go",
     ],
+    proto = "gateway",
 )
