--- a/scion-pki/trcs/BUILD.bazel
+++ b/scion-pki/trcs/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
         "decode.go",
         "extract.go",
         "format.go",
-        "human.go",
+        "inspect.go",
         "payload.go",
         "sign.go",
         "toasn.go",
@@ -40,7 +40,7 @@ go_test(
         "decoded_test.go",
         "export_test.go",
         "format_test.go",
-        "human_test.go",
+        "inspect_test.go",
         "sign_test.go",
         "toasn_test.go",
         "verify_test.go",
