--- a/private/path/pathpol/BUILD.bazel
+++ b/private/path/pathpol/BUILD.bazel
@@ -16,8 +16,8 @@ go_library(
         "//antlr/sequence:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/log:go_default_library",
-        "//pkg/private/common:go_default_library",
         "//pkg/private/serrors:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//pkg/snet:go_default_library",
         "@com_github_antlr_antlr4_runtime_go_antlr//:go_default_library",
     ],
@@ -36,8 +36,8 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//pkg/addr:go_default_library",
-        "//pkg/private/common:go_default_library",
         "//pkg/private/xtest/graph:go_default_library",
+        "//pkg/segment/iface:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/mock_snet:go_default_library",
         "//pkg/snet/path:go_default_library",
