--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -26,10 +26,11 @@ steps:
         - exit_status: 255 # Forced agent shutdown
     timeout_in_minutes: 10
   - wait
-  - label: "Package :debian: :openwrt:"
+  - label: "Package :debian: :openwrt: :rpm:"
     command: |
       make dist-deb BFLAGS="--file_name_version=${SCION_VERSION}"
       make dist-openwrt BFLAGS="--file_name_version=${SCION_VERSION}"
+      make dist-rpm BFLAGS="--file_name_version=${SCION_VERSION}"
     artifact_paths:
       - "installables/scion_*.tar.gz"
     plugins:
@@ -42,6 +43,7 @@ steps:
             tar -chaf scion_${SCION_VERSION}_deb_i386.tar.gz *_${SCION_VERSION}_i386.deb
             tar -chaf scion_${SCION_VERSION}_deb_armel.tar.gz *_${SCION_VERSION}_armel.deb
             tar -chaf scion_${SCION_VERSION}_openwrt_x86_64.tar.gz *_${SCION_VERSION}_x86_64.ipk
+            tar -chaf scion_${SCION_VERSION}_rpm_x86_64.tar.gz *_${SCION_VERSION}_x86_64.rpm
             popd
             ls installables
           post-artifact: |
@@ -53,6 +55,8 @@ steps:
             - <a href="artifact://installables/scion_${SCION_VERSION}_deb_armel.tar.gz">armel</a>
             #### Packages :openwrt:
             - <a href="artifact://installables/scion_${SCION_VERSION}_openwrt_x86_64.tar.gz">x86_64</a>
+            #### Packages :rpm:
+            - <a href="artifact://installables/scion_${SCION_VERSION}_rpm_x86_64.tar.gz">x86_64</a>
             EOF
     key: dist
     retry: *automatic-retry
