--- a/antlr/traffic_class/BUILD.bazel
+++ b/antlr/traffic_class/BUILD.bazel
@@ -1,4 +1,20 @@
 load("//tools/lint:go.bzl", "go_library")
+load("//tools/lint:go_config.bzl", "go_lint_config")
+load("@apple_rules_lint//lint:defs.bzl", "package_lint_config")
+
+go_lint_config(
+    name = "go_lint_config",
+    exclude_filter = [
+        "_lexer.go",
+    ],
+    visibility = [
+        "//visibility:public",
+    ],
+)
+
+package_lint_config({
+    "go": ":go_lint_config",
+})
 
 go_library(
     name = "go_default_library",
