Stop using undecorated python scripts from bash.
scion.sh was still using togen.py, topodot.py and set_ipv6_addr.py
directly; with the consequence that any significant deviation between the
python environment in the build tree and that of the global environment could
cause these tools to fail.

Instead, we now produce py_binaries for these three tools, install them in
bin/, and use them from there.

To make them work when not invoked from bazel, we have to package them as self
contained executables, which is achieved by adding the --build_python_zip
command line flag. Suprisingly, this is the only method available. There isn't
even an equivalent parameter to the py_binary rule. All other workarounds turn
out to do crazy things (e.g. pkg_tar with the "include_run_files" option
produces non-sense). The tools are requested as part of make all.

Another case of calling python scripts outside bazel was
router_benchmark/benchmark.py. For that one, I arranged so it can be invoked
through bazel (like its twin brother test.py) instead of only from the command
line.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -213,10 +213,11 @@ pkg_tar(
 pkg_tar(
     name = "scion-topo",
     srcs = [
-        "//scion-pki/cmd/scion-pki",
+        "//tools:set_ipv6_addr",
+        "//tools:topodot",
+        "//tools:topogen",
     ],
     mode = "0755",
-    package_dir = "",
 )
 
 # Nogo - Go code analysis tool
