More sh->python use: supervisor.sh.
Deal with more bazel/python non-sense. py_binary cannot be made with an
imported entry point. There has to be a redundant local wrapper.

--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -27,6 +27,26 @@ py_binary(
 )
 
 py_binary(
+    name = "supervisord",
+    srcs = ["supervisord.py"],
+    deps = [
+        requirement("supervisor"),
+        requirement("supervisor-wildcards"),
+    ],
+    visibility = ["//visibility:public"],
+)
+
+py_binary(
+    name = "supervisorctl",
+    srcs = ["supervisorctl.py"],
+    deps = [
+        requirement("supervisor"),
+        requirement("supervisor-wildcards"),
+    ],
+    visibility = ["//visibility:public"],
+)
+
+py_binary(
     name = "topogen",
     srcs = ["topogen.py"],
     data = [
