--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -209,13 +209,16 @@ pkg_tar(
     package_dir = "",
 )
 
-# This contains all of the binaries needed to run the topology generator.
+# This contains all of the binaries needed to run the topology generator
+# and start a local stack.
 pkg_tar(
     name = "scion-topo",
     srcs = [
         "//tools:set_ipv6_addr",
         "//tools:topodot",
         "//tools:topogen",
+        "//tools:supervisord",
+        "//tools:supervisorctl",
     ],
     mode = "0755",
 )
