router: serialize directly into packet buffers (#4654)
In every case where the router modified packets it would serialize
updated headers to a temporary buffer and then copy that to the packet
buffer.

To avoid this extra copy, replaced gopacket.serializeBuffer with a
custom implementation that writes to a given buffer. In this case, the
packet's raw buffer.

There is one remaining copy for some SCMP messages because we have to
move the existing packet to the payload. This too could be avoided but
that's for another PR; it would require to leave headroom in received
packets.

The performance impact is very small since, on the critical path, it
just avoids copying a scion hdr per packet, but it is a simplification.
It also pays back the copy added by a previous simplification of the BFD
code. As such...

Contributes to #4593

--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "dataplane.go",
         "fnv1aCheap.go",
         "metrics.go",
+        "serialize_proxy.go",
         "svc.go",
     ],
     importpath = "github.com/scionproto/scion/router",
