Move a large part of underlay-specific code out of the main router.
The underlay code is now the udpip underlay provider.

The refactoring is not complete. The assumption that underlay addresses are
udp/ip addresses is still part of the router. Also, the main receiver and
sender tasks are still where they are and use the underlay connections via
a temporary API. The reason for that is to make the diff somewhat more
reviewable by not moving large swaths of code from one file to another.

--- a/router/cmd/router/BUILD.bazel
+++ b/router/cmd/router/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "//router/config:go_default_library",
         "//router/control:go_default_library",
         "//router/mgmtapi:go_default_library",
+        "//router/underlayproviders:go_default_library",
         "@com_github_go_chi_chi_v5//:go_default_library",
         "@com_github_go_chi_cors//:go_default_library",
         "@org_golang_x_sync//errgroup:go_default_library",
