--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "metrics.go",
         "serialize_proxy.go",
         "svc.go",
+        "underlay.go",
     ],
     importpath = "github.com/scionproto/scion/router",
     visibility = ["//visibility:public"],
@@ -69,6 +70,7 @@ go_test(
         "//private/underlay/conn:go_default_library",
         "//router/control:go_default_library",
         "//router/mock_router:go_default_library",
+        "//router/underlayproviders:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_google_gopacket//:go_default_library",
         "@com_github_google_gopacket//layers:go_default_library",
