Finish the router initialization changes.
Since there now are constructors, there was no reason to leave the DataPlane
type exported. So unexported it and massaged the few areas that were hurt
by that.

--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -31,6 +31,7 @@ go_library(
         "//pkg/slayers/path/scion:go_default_library",
         "//pkg/spao:go_default_library",
         "//private/drkey/drkeyutil:go_default_library",
+        "//private/env:go_default_library",
         "//private/topology:go_default_library",
         "//private/underlay/conn:go_default_library",
         "//router/bfd:go_default_library",
