ci: Add copyloopvar linter to enable later

--- a/.golangcilint.yml
+++ b/.golangcilint.yml
@@ -11,6 +11,7 @@ linters:
     - typecheck
     - unused
     # Extended linters.
+    # - copyloopvar
     - rowserrcheck
     - sqlclosecheck
     - unconvert
