chore: upgrade go to v1.24.0 (#4702)
Since the release of [Go v1.24.0](https://tip.golang.org/doc/go1.24), Go
1.22 is no longer supported.

~~We might go for 1.24 for the various performance improvements and the
significant changes to the crypto packages but that's up to collective
consensus.~~

We can't upgrade to `v1.23.x` because of significant performance
regression and instead we need to upgrade all the way to Go `v1.24.0`.

- `private/trust`: Change RSA key generation in `TestSignerGenGenerate`
to use 1024-bit keys instead of 512-bit because the latter is no longer
accepted, see https://github.com/golang/go/issues/70643
- **test:** slightly lower router benchmark expectations as there seems
to be a general performance regression since the Go upgrade to v1.24
(not as much as v1.23.6 though).
- **ci:** remove linter `exportloopref` due to deprecation, see
[golangci-lint/CHANGELOG](https://github.com/golangci/golangci-lint/blob/312fdf7a8d0516ced651630c6196da9d6053c2d7/CHANGELOG.md?plain=1#L251)
- **ci:** disable Go linker's new automatic build id setting which
causes rpmbuild to fail due to all binaries having the same build id.
- **ci:** temporarily remove `nogo` due to incompatibility with Go 1.24
until further investigation.
- **ci:** upgrade golangci-lint to v1.64.5

--- a/.golangcilint.yml
+++ b/.golangcilint.yml
@@ -11,7 +11,7 @@ linters:
     - typecheck
     - unused
     # Extended linters.
-    - exportloopref
+    # - copyloopvar
     - rowserrcheck
     - sqlclosecheck
     - unconvert
