Upgrade to Bazel 7.5 (without migrating to modules).
Changes that were needed:

* Pain: Python binaries are somehow handled a bit differently and cannot import from a path
  relative to themselves by default.
  Remedy: One must now add an explicit root path for imports in py_binary rules.
* Pain: The prohibition on generate un-specified targets into a directory is now enforced.
  Gendocs is broken.
  Remedy: Replace the gendocs genrules with a fully specified rule that declare a directory
  output.
* Pain: Bazel uses a new method of sanboxing by default: containers. Tests that have a
  dockerized component and mount a data directory end-up with an empty data directory.
  Probably, since docker is a server, it does not create a container nested in the caller's
  container, but just creates an un-nested container. As a result, whatever pathname we tell it
  to mount is relative to a different root.
  Remedy: Use an obscure set of magic arguments to restore the old sandboxing behaviour for
  tests.

--- a/acceptance/common/BUILD.bazel
+++ b/acceptance/common/BUILD.bazel
@@ -30,6 +30,9 @@ py_library(
 py_library(
     name = "scion",
     srcs = ["scion.py"],
+    data = [
+        "//tools/topology:py_default_library",
+    ],
     deps = [
         requirement("plumbum"),
         requirement("toml"),
