Add MODULE.bazel version that is accepted by the migration script:
~/bazel-central-registry/tools/migrate_to_bzlmod.py -f -t //:all
INFO: Executing command: bazel --version
bazel 7.3.0
INFO: Generating ./resolved_deps.py file
INFO: Executing command: bazel clean --expunge
INFO: Executing command: bazel build --nobuild --experimental_repository_resolved_file=resolved_deps.py //:all
INFO: Found 1111 external repositories in the ./resolved_deps.py file.
INFO: Executing command: bazel build --nobuild --enable_bzlmod //:all
INFO: Congratulations! All external repositories needed for building `//:all` are available with Bzlmod (and the WORKSPACE.bzlmod file)!
INFO: Things you should do next:
INFO:   - Migrate remaining dependencies in the WORKSPACE.bzlmod file to Bzlmod.
INFO:   - Run the actual build with Bzlmod enabled (with --enable_bzlmod, but without --nobuild) and fix remaining build time issues.

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,6 +1,8 @@
 ### common options for all subcommands (help, query, build, ...)
 common --show_timestamps --enable_platform_specific_config
 
+common:bzlmod --enable_bzlmod
+
 # connect to buchgr/bazel-remote cache
 # These flags can unfortunately not be specified for `common`, as they are not accepted by all subcommands (help, version, dump)
 # The --experimental_remote_downloader_local_fallback is used as workaround for issue with rules_oci (https://github.com/bazel-contrib/rules_oci/issues/275).
