--- a/acceptance/router_benchmark/BUILD.bazel
+++ b/acceptance/router_benchmark/BUILD.bazel
@@ -1,6 +1,6 @@
 load("//acceptance/common:raw.bzl", "raw_test")
 load("//tools/lint:py.bzl", "py_binary", "py_library")
-load("@com_github_scionproto_scion_python_deps//:requirements.bzl", "requirement")
+load("@scion_python_deps//:requirements.bzl", "requirement")
 
 exports_files(
     [
