--- a/tools/topology/BUILD.bazel
+++ b/tools/topology/BUILD.bazel
@@ -1,5 +1,5 @@
 load("//tools/lint:py.bzl", "py_library")
-load("@com_github_scionproto_scion_python_deps//:requirements.bzl", "requirement")
+load("@scion_python_deps//:requirements.bzl", "requirement")
 
 package(default_visibility = ["//visibility:public"])
 
