--- a/acceptance/common/BUILD.bazel
+++ b/acceptance/common/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@com_github_scionproto_scion_python_deps//:requirements.bzl", "requirement")
+load("@scion_python_deps//:requirements.bzl", "requirement")
 load("//tools/lint:py.bzl", "py_library", "py_test")
 
 package(default_visibility = ["//visibility:public"])
