--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@rules_python//python:defs.bzl", "py_binary")
-load("@com_github_scionproto_scion_python_deps//:requirements.bzl", "requirement")
+load("@scion_python_deps//:requirements.bzl", "requirement")
 load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
 
 exports_files([
