--- a/tools/braccept/BUILD.bazel
+++ b/tools/braccept/BUILD.bazel
@@ -6,15 +6,27 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/scionproto/scion/tools/braccept",
     visibility = ["//visibility:private"],
-    deps = [
-        "//pkg/log:go_default_library",
-        "//pkg/scrypto:go_default_library",
-        "//pkg/slayers:go_default_library",
-        "//private/keyconf:go_default_library",
-        "//tools/braccept/cases:go_default_library",
-        "//tools/braccept/runner:go_default_library",
-        "@com_github_gopacket_gopacket//layers:go_default_library",
-    ],
+    deps = select({
+        "@io_bazel_rules_go//go/platform:android": [
+            "//pkg/log:go_default_library",
+            "//pkg/scrypto:go_default_library",
+            "//pkg/slayers:go_default_library",
+            "//private/keyconf:go_default_library",
+            "//tools/braccept/cases:go_default_library",
+            "//tools/braccept/runner:go_default_library",
+            "@com_github_gopacket_gopacket//layers:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:linux": [
+            "//pkg/log:go_default_library",
+            "//pkg/scrypto:go_default_library",
+            "//pkg/slayers:go_default_library",
+            "//private/keyconf:go_default_library",
+            "//tools/braccept/cases:go_default_library",
+            "//tools/braccept/runner:go_default_library",
+            "@com_github_gopacket_gopacket//layers:go_default_library",
+        ],
+        "//conditions:default": [],
+    }),
 )
 
 scion_go_binary(
