--- a/.bazelrc
+++ b/.bazelrc
@@ -1,5 +1,5 @@
 ### common options for all subcommands (help, query, build, ...)
-common --show_timestamps --enable_platform_specific_config
+common --show_timestamps --enable_platform_specific_config --noenable_bzlmod
 
 # connect to buchgr/bazel-remote cache
 # These flags can unfortunately not be specified for `common`, as they are not accepted by all subcommands (help, version, dump)
