Draft of a fix for PR 4674. TODO: delete zsh and figure out if all sh -> bash changes were needed

--- a/docker/tester_deb.yaml
+++ b/docker/tester_deb.yaml
@@ -20,6 +20,7 @@ archs:
 
 packages:
   - bridge-utils
+  - bash
   - iperf3
   - iptables
   - netcat-openbsd
@@ -29,3 +30,4 @@ packages:
   - telnet
   - tshark
   - wget
+  - zsh
