build: upgrade to Bazel 7.5 (without migrating to modules) (#4705)
Changes that were needed:

* Pain: Python binaries are somehow handled a bit differently and cannot
import from a path relative to themselves by default. Remedy: One must
now add an explicit root path for imports in py_binary rules.
* Pain: The prohibition on generate un-specified targets into a
directory is now enforced. Gendocs is broken. Remedy: Replace the
gendocs genrules with a fully specified rule that declare a directory
output.
* Pain: Bazel uses a new method of sandboxing by default: containers.
Tests that have a dockerized component and mount a data directory end-up
with an empty data directory. I can only speculate why (because
containers end-up nested, or because they don't). Remedy: Use an obscure
set of magic arguments to restore the old sandboxing behavior for tests.
* Pain: bazel now creates canonically named directories for external
deps. They confuse our licences.sh script so that licence files are
produced and expected by the check_generated CI test, but aren't
necessarily included in PRs. Remedy: filter those directories out when
extracting licences; they are redundant.
* Pain: https://github.com/bazelbuild/rules_python/issues/1675. Remedy:
--noenable_bzlmod

--- a/acceptance/router_benchmark/BUILD.bazel
+++ b/acceptance/router_benchmark/BUILD.bazel
@@ -60,6 +60,7 @@ py_binary(
     data = [
         "//acceptance/router_benchmark/brload",
     ],
+    imports = ["."],
     visibility = ["//visibility:public"],
     deps = [
         "benchmarklib",
